plugins/sidescan/SidescanPanel: Fix Java9+ deprecation for new Double.